Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

COMMITERS

Do not forget to update this page on the wiki when making changes relevant to developers:
http://docs.joomla.org/index.php?title=Version_1.6_Developer_Notes

24-Jan-2009 Andrew Eddie
 ^ Move text files to /installation/ folder
 
23-Jan-2009 Anthony Ferrara
 + Added JFactory::getFeedParser() to return simplepie object
 ^ Deprecated JFactory::getXMLParser()
 ^ Throw exception on calling JFactory::getXMLParser with 'DOM' type (since DomDocument is removed)
 - Dommit library removed
 - XMLRPC plugins/config/installsql removed
 
23-Jan-2009 Louis Landry
 - Removed XMLRPC application
 - Removed XStandard Plugin

23-Jan-2009 Sam Moffatt
  ^ Fixed up issue with missing type's for authentication plugins

20-Jan-2009 Charl van Niekerk
 - Removed target="_blank" from com_contact.
 - Removed target="_blank" from com_newsfeeds.
 # Fixed call to registerAssetInGroups in JAclAdmin.

16-Jan-2009 Sam Moffatt
 ^ Changed default exclusion filter for JFolder::files
 # Fixed issue with quanta not properly being detected with tasks
 + Started work on new filesystem adapter for backup system
 + Added exclusion filter for tables in the table adapter 

15-Jan-2009 Sam Moffatt
 # Fixed issue with manage view in com_installer
 ^ Updates to backup system

11-Jan-2009 Sam Moffatt
 # [#12577] Small change in components/com_banners/models/banner.php (1.5 Tracker)

09-Jan-2009 Sam Moffatt
 ^ Fix to module selectlist to avoid invalid HTML generation

02-Jan-2009 Charl van Niekerk
 - Removed some of the target="_blank" attributes.

31-Dec-2008 Charl van Niekerk
 # Fixed incorrect construction of JUser object in password reset.

29-Dec-2008 Ercan Ozkaya
 + Added method chaining support and access keywords to JQuery
 - Removed debug code from JAuthentication